--- a/components/About/about.html
+++ b/components/About/about.html
@@ -1,8 +1,9 @@
 <html>
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
+    <head>
+        <link rel="stylesheet" href="about.css">
+    </head>
 
-<h1> Hi </h1>
-<h2>This is the about page</h2>
+<h1> Hello {{guest}} </h1>
 
 <div>
     <p>Click the button to run a function:</p>
