--- a/components/About/about.html
+++ b/components/About/about.html
@@ -1,14 +1,11 @@
 <html>
     <head>
-        <link rel="stylesheet" href="about.css">
-    </head>
+            <link rel="stylesheet" href="about.css">    </head>
 
-<h1> Hello {{guest}} </h1>
+<h1 id = "head" > Hellodgdf {{guest}} </h1>
 
 <div>
-    <p>Click the button to run a function:</p>
-    <button ng-click="myFunc()">OK</button>
-    <p>The button has been clicked {{count}} times.</p>
+
     
 
 </div>
