--- a/components/About/about.html
+++ b/components/About/about.html
@@ -1,12 +1,15 @@
 <html>
-    <head>
-            <link rel="stylesheet" href="about.css">    </head>
 
-<h1 id = "head" > Hellodgdf {{guest}} </h1>
+<head>
+    <link rel="stylesheet" href="about.css"> 
+</head>
+
+<h1 id="head">Hello nir {{guest}} </h1>
 
 <div>
 
-    
+
 
 </div>
+
 </html>
