--- a/components/About/about.html
+++ b/components/About/about.html
@@ -1,10 +1,10 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="about.css"> 
+    <link rel="stylesheet" href="/components/About/about.css"> 
 </head>
 
-<h1 id="head">Hello nir {{guest}} </h1>
+<h1 id="headd">Hello {{guest}} </h1>
 
 <div>
 
