--- a/components/POI/poi.html
+++ b/components/POI/poi.html
@@ -14,7 +14,7 @@
                         <br> City state:
                         <span ng-bind="city.state"></span>
                         <br>
-                        <img ng-style="{'height': '100px'}" " ng-src="{{city.image}} ">
+                        <img ng-style="{'height': '100px'}"  ng-src="{{city.image}} ">
                         </td>      
                         <td>
                                 <!-- with input we would like to have for each option it's own input -->
