--- a/components/login/login.html
+++ b/components/login/login.html
@@ -1,12 +1,107 @@
-<html>
-    <body>
-        
-<div class = "border border-info" >
-    <input type="text" placeholder="Username" class="form-group">
-    <br>
-    <input type="text" placeholder="password" class="form-group">
+<style>
+    #content {
+        position: absolute;
+        top: 7%;
+        width: 100%;
+        height: 90%;
+        background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c6/Be%27er_Sheva_at_night.jpg');
+        background-repeat: no-repeat;
+    }
+
+    #head {
+        text-align: center;
+    }
+
+    #log {
+        position: absolute;
+        top: 15%;
+        left: 33%;
+        width: 30%;
+        text-align: center;
+    }
+
+    .border {
+        border-radius: 5px;
+        padding: 8%;
+    }
+
+    #go_to_register {
+        text-align: center;
+    }
+
+    #pass-recovery {
+        text-align: center;
+    }
+
+    #footer {
+        position: absolute;
+        top: 70%;
+        left: 0;
+        width: 100%;
+        background-color: black;
+    }
+
+    #poi1 {
+        position: absolute;
+        top: 5%;
+        left: 5%;
+    }
+
+    #poi2 {
+        position: absolute;
+        top: 5%;
+        left: 45%;
+    }
+
+    #poi3 {
+        position: absolute;
+        top: 5%;
+        left: 90%;
+    }
+</style>
+
+
+
+<div id="content" ng-controller="loginController" class="border">
+
+    <div id="log">
+        <div id="head">
+            <h3>Login</h3>
+        </div>
+        <div class="border border-info">
+            <input type="text" placeholder="Username" class="form-control">
+            <br>
+            <input type="text" placeholder="password" class="form-control">
+            <br>
+            <button class="btn btn-secondary btn-sm">Submit</button>
+            <div id="go_to_register">
+                <a type="link" href="#/register"> not registered yet?</a>
+
+            </div>
+
+        </div>
+        <div id="pass-recovery">
+            <a type="link" href="#/" ng-click="loginController.recover = true"> forgot your password?</a>
+            <div ng-if="loginController.recover == true">
+                Q1
+                <br>
+                <input type="text" placeholder="your answer">
+            </div>
+        </div>
+
+    </div>
+    <div id="footer" class="border">
+        <div id="poi1">
+            poi1.name
+            <br> poi1.details
+        </div>
+        <div id="poi2">
+            poi2.name
+            <br> poi2.details
+        </div>
+        <div id="poi3">
+            poi3.name
+            <br> poi3.details
+        </div>
+    </div>
 </div>
-
-
-    </body>
-</html>
