--- a/components/register/register.html
+++ b/components/register/register.html
@@ -15,11 +15,18 @@
             text-align: center;
         }
 
+        .border {
+            padding: 5%;
+            border: 2px solid black;
+            border-radius: 5px;
+            background-color: slategrey
+        }
+
         #reg {
             position: absolute;
             top: 5%;
             left: 37%;
-            width: 25%;
+            width: 29%;
         }
 
         label {
@@ -34,36 +41,39 @@
             <div id="head">
                 <h3>Register</h3>
             </div>
-
-            <input type="text" placeholder="FirstName" class="form-control">
-            <input type="text" placeholder="LastName" class="form-control">
-            <input type="text" placeholder="City" class="form-control">
-            <select name="Country" id="Country" class="form-control" aria-placeholder="Country">
-                <option hidden>Country</option>
-                <option value="1">1</option>
-                <option value="2">2</option>
-            </select>
-            <input type="text" placeholder="Email" class="form-control">
-            <label>choose at least two categories:</label>
-            <br>
-            <input type="checkbox" placeholder="Category"> Resturants
-            <br>
-            <input type="checkbox" placeholder="Category"> Parks
-            <br>
-            <input type="checkbox" placeholder="Category"> Academic institutions
-            <br>
-            <input type="checkbox" placeholder="Category"> nof
-            <br>
-            <label>choose at least one question:</label>
-            <br>
-            <input type="checkbox" placeholder="Question"> Q1
-            <br>
-            <input type="checkbox" placeholder="Question"> Q2
-            <br>
-            <br>
-            <button class="btn btn-secondary btn-sm">Submit</button>
-
-
+            <div class="border border-dark">
+                <form ng-submit="registerController.user()">
+                    <input ng-model="registerController.firstName" type="text" placeholder="FirstName" class="form-control">
+                    <input ng-model="registerController.lastName" type="text" placeholder="LastName" class="form-control">
+                    <input ng-model="registerController.city" type="text" placeholder="City" class="form-control">
+                    <select name="Country" id="Country" class="form-control" aria-placeholder="Country">
+                        <option hidden>Country</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                    </select>
+                    <input ng-model = "registerController.email" type="text" placeholder="Email" class="form-control">
+                    <label>choose at least two categories:</label>
+                    <br>
+                    <input type="checkbox" placeholder="Category"> Resturants
+                    <br>
+                    <input type="checkbox" placeholder="Category"> Parks
+                    <br>
+                    <input type="checkbox" placeholder="Category"> Academic institutions
+                    <br>
+                    <input type="checkbox" placeholder="Category"> nof
+                    <br>
+                    <label>choose at least one question:</label>
+                    <br>
+                    <input type="checkbox" placeholder="Question"> Q1
+                    <br>
+                    <input type="checkbox" placeholder="Question"> Q2
+                    <br>
+                    <br>
+                    <button type="submit" class="btn btn-secondary btn-sm">Submit</button>
+                    {{registerController.firstName}}
+                </form>
+                
+            </div>
         </div>
 
     </div>
