--- a/components/About/about.html
+++ b/components/About/about.html
@@ -4,7 +4,7 @@
         top: 7%;
         width: 100%;
         height: 93%;
-        background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c6/Be%27er_Sheva_at_night.jpg');
+        background-image: url('https://i.ytimg.com/vi/_lQHg7NjZSI/maxresdefault.jpg');
         background-repeat: no-repeat;
     }
 
