--- a/components/login/login.html
+++ b/components/login/login.html
@@ -4,6 +4,14 @@
         top: 7%;
         width: 100%;
         height: 90%;
+
+    }
+    #upper{
+        position: absolute;
+        top: 0%;
+        left: 0%;
+        height: 70%;
+        width: 100%;
         background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c6/Be%27er_Sheva_at_night.jpg');
         background-repeat: no-repeat;
     }
@@ -18,11 +26,17 @@
         left: 33%;
         width: 30%;
         text-align: center;
+        
+    }
+
+    a{
+        color: black;
     }
 
     .border {
         border-radius: 5px;
         padding: 8%;
+        background-color: slategrey
     }
 
     #go_to_register {
@@ -63,32 +77,32 @@
 
 
 <div id="content" ng-controller="loginController" class="border">
-
-    <div id="log">
-        <div id="head">
-            <h3>Login</h3>
-        </div>
-        <div class="border border-info">
-            <input type="text" placeholder="Username" class="form-control">
-            <br>
-            <input type="text" placeholder="password" class="form-control">
-            <br>
-            <button class="btn btn-secondary btn-sm">Submit</button>
-            <div id="go_to_register">
-                <a type="link" href="#/register"> not registered yet?</a>
-
+    <div id ="upper" >
+        <div id="log">
+            <div id="head">
+                <h3>Login</h3>
             </div>
-
-        </div>
-        <div id="pass-recovery">
-            <a type="link" href="#/" ng-click="loginController.recover = true"> forgot your password?</a>
-            <div ng-if="loginController.recover == true">
-                Q1
+            <div class="border">
+                <input type="text" placeholder="Username" class="form-control">
                 <br>
-                <input type="text" placeholder="your answer">
+                <input type="text" placeholder="password" class="form-control">
+                <br>
+                <button class="btn btn-secondary btn-sm">Submit</button>
+                <div id="go_to_register">
+                    <a type="link" href="#/register"> not registered yet?</a>
+
+                </div>
+
+            </div>
+            <div id="pass-recovery">
+                <a type="link" href="#/" ng-click="loginController.recover = true"> forgot your password?</a>
+                <div ng-if="loginController.recover == true">
+                    Q1
+                    <br>
+                    <input type="text" placeholder="your answer">
+                </div>
             </div>
         </div>
-
     </div>
     <div id="footer" class="border">
         <div id="poi1">
