--- a/components/Services/service.html
+++ b/components/Services/service.html
@@ -12,5 +12,10 @@
 <button ng-click="srvCtrl.reg()">validate token</button>
 <span ng-bind="srvCtrl.reg.content"></span>
 <br>
+<button ng-click="srvCtrl.reg()">get pois</button>
+<span ng-bind="srvCtrl.reg.content"></span>
+
+
+<br>
 <button ng-click="srvCtrl.addTokenToLocalStorage()">addTokenToLocalStorage</button>
 </p>
