--- a/components/home/home.html
+++ b/components/home/home.html
@@ -56,7 +56,7 @@
 
 <body>
 
-    <div id="content" ng-controller="homCtrl">
+    <div id="content" ng-controller="homeController as homCtrl">
         <div id="recomended" class="border">
             <div id="category1">
                 category1:
