--- a/components/POI/poi.html
+++ b/components/POI/poi.html
@@ -1,36 +1,12 @@
 <div ng-controller="poiCtrl as poiCtrl">
-<table >
-        <tr ng-model = "poiCtrl.cities" ng-repeat="(id , city) in poiCtrl.cities">
-                <td>
-                        <button ng-click="poiCtrl.selectedCity(id)"> add city</button>
-                </td>
-                <td>
-                        <!-- with radio button we would like one data model for each option -->
-                        <input type="radio"  value="{{city.name}}_{{id}}" ng-model="poiCtrl.selected">
-                </td>
 
-                <td>
-                        City name:
-                        <span ng-bind="city.name"></span>
-                        <br> City state:
-                        <span ng-bind="city.state"></span>
-                        <br>
-                        <img ng-style="{'height': '100px'}"  ng-src="{{city.image}} ">
-                        </td>      
-                        <td>
-                                <!-- with input we would like to have for each option it's own input -->
-                                <!-- <input type="text " value="{{city.name}}_{{id}} " ng-model="poiCtrl.amount[id] " > -->
-                                <input type="text " value="{{city.name}}_{{id}} " ng-model="poiCtrl.amount[id] " >
-                                <button ng-click="poiCtrl.addToCart(id, city) ">add</button>
-                                </td>
-                                </tr>
-                                  
-                
-
-                
-    
-        
-</table>
+        <div ng-model="poiCtrl.sites" ng-repeat="(id , site) in poiCtrl.sites">
+               
+                Site name:
+                <a href="#home" target="_blank"  value="{{site.name}}_{{id}}" ng-model="poiCtrl.selected" >{{site.name}}</a>
+                <br>
+                <img ng-style="{'height': '100px'}" ng-src="{{site.image}} ">
+                <br>
+               <button>Add to Favoriets</button>
+        </div>
 </div>
-        Selected city: {{poiCtrl.selected}}
-
