--- a/components/POI/poi.html
+++ b/components/POI/poi.html
@@ -3,10 +3,11 @@
         <div ng-model="poiCtrl.sites" ng-repeat="(id , site) in poiCtrl.sites">
                
                 Site name:
-                <a href="#home" target="_blank"  value="{{site.name}}_{{id}}" ng-model="poiCtrl.selected" >{{site.name}}</a>
+                <a href="#poiPage" target="_blank" ng-click="poiCtrl.selectedSite(id)"  value="{{site.name}}_{{id}}" ng-model="poiCtrl.selected" >{{site.name}} {{poiCtrl.id}} </a>
                 <br>
                 <img ng-style="{'height': '100px'}" ng-src="{{site.image}} ">
                 <br>
                <button>Add to Favoriets</button>
         </div>
 </div>
+
