fetching images from pois table

--- a/components/POI/poi.html
+++ b/components/POI/poi.html
@@ -5,7 +5,7 @@
                 Site name:
                 <a href="#poiPage" target="_blank" ng-click="poiCtrl.selectedSite(id)"  value="{{site.name}}_{{id}}" ng-model="poiCtrl.selected" >{{site.name}} {{poiCtrl.id}} </a>
                 <br>
-                <img ng-style="{'height': '100px'}" ng-src="{{site.image}} ">
+                <img ng-style="{'height': '100px'}" ng-src="{{site.pic}} ">
                 <br>
                <button>Add to Favoriets</button>
         </div>
