--- a/components/register/register.html
+++ b/components/register/register.html
@@ -64,9 +64,9 @@
                     <br>
                     <label>choose at least one question:</label>
                     <br>
-                    <input type="checkbox" placeholder="Question"> Q1
+                    <input type="checkbox" placeholder="Question"> {{registerController.Q1}}
                     <br>
-                    <input type="checkbox" placeholder="Question"> Q2
+                    <input type="checkbox" placeholder="Question"> {{registerController.Q2}}
                     <br>
                     <br>
                     <button type="submit" class="btn btn-secondary btn-sm">Submit</button>
