--- a/components/login/login.html
+++ b/components/login/login.html
@@ -74,7 +74,7 @@
     }
 </style>
 
-
+<link rel="stylesheet" href="login.css">
 
 <div id="content" ng-controller="loginController as logCtrl" class="border">
     <div id ="upper" >
@@ -84,9 +84,10 @@
             </div>
             <div class="border">
                 <form ng-submit="logCtrl.submit()" name="myForm">
-
+                    
                 <input type="text" placeholder="Username" class="form-control" ng-model="logCtrl.username" required ng-minlength="4">
                 <br>
+                {{logCtrl.username}}
                 <input type="text" placeholder="password" class="form-control" ng-model="logCtrl.password" required>
                 <br>
                 <button type ="submit", value ="submit" class="btn btn-secondary btn-sm" ng-disabled="myForm.$invalid">Submit</button>
