--- a/components/POI/poi.html
+++ b/components/POI/poi.html
@@ -64,7 +64,7 @@
                                         <img ng-style="{'height': '100px'}" ng-src="{{x.pic}} ">
                                 </td>
                                 <td>
-                                        <img src="./in.png" style="height: 50px; width: 50px;"> </td>
+                                        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRKWyDkdpVqjjtQcdV2n4MWaJB9WNkPo0CKvFhN9vSufr5HgNl" style="height: 50px; width: 50px;"> </td>
                                 <td></td>
                         </tr>
                 </tbody>
