--- a/components/login/login.html
+++ b/components/login/login.html
@@ -85,10 +85,10 @@
             <div class="border">
                 <form ng-submit="logCtrl.submit()" name="myForm">
                     
-                <input type="text" placeholder="Username" class="form-control" ng-model="logCtrl.username" required ng-minlength="4">
+                <input type="text" placeholder="Username" class="form-control" ng-model="logCtrl.username" ng-init=" logCtrl.username = 'barnie'" required ng-minlength="4">
                 <br>
                 {{logCtrl.username}}
-                <input type="text" placeholder="password" class="form-control" ng-model="logCtrl.password" required>
+                <input type="text" placeholder="password" class="form-control" ng-model="logCtrl.password" ng-init="logCtrl.password = '1234'" required>
                 <br>
                 <button type ="submit", value ="submit" class="btn btn-secondary btn-sm" ng-disabled="myForm.$invalid">Submit</button>
                 </form>
