--- a/components/About/about.html
+++ b/components/About/about.html
@@ -3,7 +3,7 @@
         position: absolute;
         top: 7%;
         width: 100%;
-        height: 93%;
+        height: 92%;
         background-image: url('https://i.ytimg.com/vi/_lQHg7NjZSI/maxresdefault.jpg');
         background-repeat: no-repeat;
     }
@@ -128,7 +128,7 @@
 
 
 
-<div ng-controller="aboutController" id="content">
+<div ng-controller="aboutController as aboutController" id="content">
 
     <p>Beer-Sheva is the largest city in the Negev desert of southern Israel. Often referred to as the "Capital of the Negev",
         it is the center of the fourth most populous metropolitan area in Israel, the eighth most populous Israeli city with
