--- a/components/login/login.html
+++ b/components/login/login.html
@@ -1,10 +1,10 @@
 <style>
     #content {
-        position: absolute;
+        position: fixed;
         top: 7%;
         width: 100%;
-        height: 90%;
-
+        height: 92.5%;
+    overflow: auto;
     }
     #upper{
         position: absolute;
@@ -49,7 +49,7 @@
 
     #footer {
         position: absolute;
-        top: 70%;
+        top: 66.3%;
         left: 0;
         width: 100%;
         background-color: black;
