--- a/components/register/register.html
+++ b/components/register/register.html
@@ -3,12 +3,13 @@
 <head>
     <style>
         #content {
-            position: absolute;
+            position: fixed;
             top: 7%;
             width: 100%;
             height: 93%;
             background-image: url('https://upload.wikimedia.org/wikipedia/commons/c/c6/Be%27er_Sheva_at_night.jpg');
             background-repeat: no-repeat;
+            overflow: auto;
         }
 
         #head {
@@ -24,7 +25,7 @@
 
         #reg {
             position: absolute;
-            top: 5%;
+            top: 3%;
             left: 37%;
             width: 29%;
         }
@@ -46,32 +47,31 @@
                     <input ng-model="regCtrl.username" type="text" placeholder="UserName" class="form-control">
                     <input ng-model="regCtrl.firstName" type="text" placeholder="FirstName" class="form-control">
                     <input ng-model="regCtrl.lastName" type="text" placeholder="LastName" class="form-control">
+                    <input ng-model="regCtrl.password" type="text" placeholder="Password" class="form-control">
+                    <input ng-model="regCtrl.email" type="text" placeholder="Email" class="form-control">
                     <input ng-model="regCtrl.city" type="text" placeholder="City" class="form-control">
                     <select name="Country" id="Country" class="form-control" aria-placeholder="Country" ng-model="regCtrl.selectedCountry" ng-options="item for item in regCtrl.countries">
-                    <input ng-model = "regCtrl.email" type="text" placeholder="Email" class="form-control">
-                    <label>choose at least two categories:</label>
-                    <br>
-                    <input type="checkbox" placeholder="Category" ng-model="regCtrl.category1"> Resturants
-                    <br>
-                    <input type="checkbox" placeholder="Category" ng-model="regCtrl.category2"> Parks
-                    <br>
-                    <input type="checkbox" placeholder="Category" ng-model="regCtrl.category3"> Academic institutions
-                    <br>
-                    <input type="checkbox" placeholder="Category" ng-model="regCtrl.category4"> nof
-                    <br>
-                    <label>choose at least one question:</label>
-                    <br>
-                    <input type="checkbox" placeholder="Question"> {{regCtrl.Q1}}
-                    <br>
-                    <input type="checkbox" placeholder="Question"> {{regCtrl.Q2}}
-                    <br>
-                    <input ng-model="regCtrl.password" type="text" placeholder="Password" class="form-control">
-                    <br>
-                    <br>
-                    <button type="submit" class="btn btn-secondary btn-sm">Submit</button>
-                    {{regCtrl.firstName}}
+                        <label>choose at least two categories:</label>
+                        <br>
+                        <input type="checkbox" placeholder="Category" ng-model="regCtrl.category1"> Resturants
+                        <br>
+                        <input type="checkbox" placeholder="Category" ng-model="regCtrl.category2"> Parks
+                        <br>
+                        <input type="checkbox" placeholder="Category" ng-model="regCtrl.category3"> Academic institutions
+                        <br>
+                        <input type="checkbox" placeholder="Category" ng-model="regCtrl.category4"> nof
+                        <br>
+                        <label>choose at least one question:</label>
+                        <br>
+                        <input type="checkbox" placeholder="Question"> {{regCtrl.Q1}}
+                        <br>
+                        <input type="checkbox" placeholder="Question"> {{regCtrl.Q2}}
+                        <br>
+                        <br>
+                        <button type="submit" class="btn btn-secondary btn-sm">Submit</button>
+                        {{regCtrl.firstName}}
                 </form>
-                
+
             </div>
         </div>
 
