adding favs to db

--- a/components/POI/poi.html
+++ b/components/POI/poi.html
@@ -66,7 +66,7 @@
                                 <td>
                                         <div ng-show="login"  >
                                                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRKWyDkdpVqjjtQcdV2n4MWaJB9WNkPo0CKvFhN9vSufr5HgNl" 
-                                                ng-click="poiCtrl.addToFavorits()" style="height: 50px; width: 50px;"> </td>
+                                                ng-click="poiCtrl.addToFavorits(x)" style="height: 50px; width: 50px;"> </td>
 
                                 </div>
                                 <td></td>
