--- a/components/favorites/favorites.html
+++ b/components/favorites/favorites.html
@@ -41,22 +41,7 @@
     </div>
     <div ng-repeat="fav in favCtrl.sites" id="poi" ng-if="favCtrl.pois.indexOf(fav.id) > -1">
         <label for="name"> Site name:</label>
-        {{fav.name}}
-        <br>
-        <label for="description">Description:</label>
-        {{fav.description}}
-        <br>
-        <label for="adress">Adress:</label>
-        {{fav.adress}}
-        <br>
-        <label for="category">Category:</label>
-        {{fav.category}}
-        <br>
-        <label for="Score">Score:</label>
-        {{fav.score}}
-        <br>
-        <label for="NumOfVotes">Number Of Views</label>
-        {{fav.numOfViews}}
+        <a href="#poiPage" ng-click="poiCtrl.selectedSite(fav)">{{fav.name}}</a>
         <br>
         <button id="removeButton" ng-click="favCtrl.removeFromFavorits(x)" class="form-control">Remove from favorits</button>
         <br>
