--- a/components/POI/poi.html
+++ b/components/POI/poi.html
@@ -68,10 +68,9 @@
                                         <img ng-style="{'height': '100px'}" ng-src="{{x.pic}} ">
                                 </td>
                                 <td>
-<<<<<<< HEAD
                                         <div ng-show="login">
                                                 <div ng-show="true">
-                                                        <img src="https://image.flaticon.com/icons/svg/148/148839.svg" ng-click="poiCtrl.addToFavorits()"
+                                                        <img src="https://image.flaticon.com/icons/svg/148/148839.svg" ng-click="poiCtrl.addToFavorits(x)"
                                                                 style="height: 50px; width: 50px;">
                                                 </div>
                                                 <div ng-show="!true">
@@ -79,13 +78,6 @@
                                                 </div>
                                         </div>
                                 </td>
-=======
-                                        <div ng-show="login"  >
-                                                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSRKWyDkdpVqjjtQcdV2n4MWaJB9WNkPo0CKvFhN9vSufr5HgNl" 
-                                                ng-click="poiCtrl.addToFavorits(x)" style="height: 50px; width: 50px;"> </td>
-
-                                </div>
->>>>>>> b2cb33b2be643c751e0dcc0dd2cd08a242a9ce88
                                 <td></td>
                         </tr>
                 </tbody>
