--- a/components/POI/poi.html
+++ b/components/POI/poi.html
@@ -25,7 +25,7 @@
                                 <th scope="col"></th>
 
                                 <th ng-show="login"><img src="https://image.flaticon.com/icons/svg/148/148839.svg" ng-click="poiCtrl.addToFavorits()"
-                                        style="height: 50px; width: 30px;"> {{poiCtrl.favCounter}} </th>
+                                        style="height: 50px; width: 30px;"> {{poiCtrl.size}} </th>
                                 <th></th>
                                 <th></th>
                                 <th>
