--- a/components/favorites/favorites.html
+++ b/components/favorites/favorites.html
@@ -41,9 +41,9 @@
     </div>
     <div ng-repeat="fav in favCtrl.sites" id="poi" ng-if="favCtrl.pois.indexOf(fav.id) > -1">
         <label for="name"> Site name:</label>
-        <a href="#poiPage" ng-click="poiCtrl.selectedSite(fav)">{{fav.name}}</a>
+        <a href="#poiPage" ng-click="favCtrl.selectedSite(fav)">{{fav.name}}</a>
         <br>
-        <button id="removeButton" ng-click="favCtrl.removeFromFavorits(x)" class="form-control">Remove from favorits</button>
+        <button id="removeButton" ng-click="favCtrl.removeFromFavorits(fav)" class="form-control">Remove from favorits</button>
         <br>
         <br>
     </div>
